[package]
name = "sediment"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
test-util = ["arbitrary"]
fbarrier-fsync = ["libc"]

[dependencies]
lrumap = { git = "https://github.com/khonsulabs/lrumap.git", branch = "main" }
parking_lot = { version = "0.12.0", features = ["arc_lock"] }
flume = "0.10.12"
crc = "3.0.0"
arc-bytes = "0.3.5"
libc = { version = "0.2.126", optional = true }

arbitrary = { version = "1.1.0", optional = true }

[dev-dependencies]
tempfile = "3.3.0"

[workspace]
members = ["fuzz"]
