[package]
name = "sediment"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2021"
description = "An ACID-compliant blob storage layer."
repository = "https://github.com/khonsulabs/okaywal"
keywords = ["blob-storage"]
categories = ["database"]
readme = "./README.md"

[dependencies]
okaywal = "0.1.0"
crc32c = "0.6.3"
tinyvec = "1.6.0"
thiserror = "1.0.38"
flume = "0.10.14"
