[package]
name = "benchmarks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["fbarrier-fsync"]
fbarrier-fsync = ["sediment/fbarrier-fsync"]

[dependencies]
timings = { git = "https://github.com/khonsulabs/timings", branch = "main" }
sediment = { path = "../sediment" }
marble = { version = "11.7.11", optional = true }
rusqlite = "0.27.0"

[[bench]]
name = "inserts"
harness = false
