[package]
name = "benchmarks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["fbarrier-fsync"]
iouring = ["sediment/iouring"]
fbarrier-fsync = ["sediment/fbarrier-fsync"]
sqlite = ["rusqlite"]

[dependencies]
timings = { git = "https://github.com/khonsulabs/timings", branch = "main" }
sediment = { path = "../sediment" }
marble = { version = "11.7.11", optional = true }
rusqlite = { version = "0.27.0", optional = true }
rocksdb = { version = "0.18.0", optional = true }
rand = "0.8"

[[bench]]
name = "inserts"
harness = false
