[package]
name = "benchmarks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# default = ["marble", "rocksdb", "sqlite"]
# default = ["fbarrier-fsync"]
# iouring = ["sediment/iouring"]
# fbarrier-fsync = ["sediment/fbarrier-fsync"]
sqlite = ["rusqlite"]

[dependencies]
timings = { git = "https://github.com/khonsulabs/timings", branch = "main" }
# timings = { path = "../../timings" }
sediment = { path = "../" }
marble = { version = "15.0.2", optional = true }
rusqlite = { version = "0.28.0", optional = true }
# rocksdb = { version = "0.19.0", optional = true }
rand = "0.8"

[[bench]]
name = "inserts"
harness = false
