[package]
name = "sediment-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sediment = { path = "../sediment" }
clap = { version = "3.0.18", features = ["derive"] }
shell-words = "1.1.0"
rustyline = "9.1.2"
pretty-hex = "0.3.0"
bytesize = "1.1.0"
cli-table = "0.4.7"
