[package]
name = "sediment"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
test-util = ["arbitrary"]
fbarrier-fsync = ["libc"]

[dependencies]
lrumap = { git = "https://github.com/khonsulabs/lrumap.git", branch = "main" }
parking_lot = { version = "0.12.0", features = ["arc_lock"] }
flume = "0.10.12"
crc = "3.0.0"
libc = { version = "0.2.126", optional = true }
num-traits = "0.2"
bitvec = "1.0.0"

arbitrary = { version = "1.1.0", optional = true }

[dev-dependencies]
tempfile = "3.3.0"

# [patch."https://github.com/khonsulabs/lrumap.git"]
# lrumap = { path = "../lrumap" }
