[package]
name = "sediment"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
test-util = ["arbitrary"]

# This feature only affects Apple OSes.
#
# On Apple OSes, ACID compliance can only be achieved through using `fcntl(_,
# F_FULLFSYNC, _)` instead of `fsync()`. Unfortunately, using `F_FULLFSYNC` can
# be incredibly slow.
#
# Apple introduced another mechanism to allow background flushing while still
# guaranteeing write ordering: `fcntl(_, F_BARRIERFSYNC, _)`.
#
# Enabling this feature will switch Sediment from using `F_FULLFSYNC` to
# `F_BARRIERFSYNC`.
fbarrier-fsync = ["libc"]
iouring = ["tokio-uring", "tokio", "futures-util"]

[dependencies]
lrumap = { git = "https://github.com/khonsulabs/lrumap.git", branch = "main" }
parking_lot = { version = "0.12.0", features = ["arc_lock"] }
flume = "0.10.12"
crc32c = "0.6.3"
libc = { version = "0.2.126", optional = true }
num-traits = "0.2"
bitvec = "1.0.0"
tokio-uring = { version = "0.3.0", optional = true }
tokio = { version = "1.19.2", features = ["rt"], optional = true }
futures-util = { version = "0.3", optional = true }

arbitrary = { version = "1.1.0", optional = true }

[dev-dependencies]
tempfile = "3.3.0"

# [patch."https://github.com/khonsulabs/lrumap.git"]
# lrumap = { path = "../lrumap" }
